--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<h1> Esta é minha primeira página com GitHub Pages </h1> <p>Obrigado, GitHub!</p>
+<h1> Esta é minha primeira página com GitHub Pages </h1> <p>Valeu Leo T.A. Obrigado, GitHub!</p>
 </html>
